Adding testng test